Optimize Controllers
Co-Authored-By: Ruchira Ranasinghe <rhvruchira@gmail.com>